[gd_scene load_steps=3 format=3 uid="uid://dw4fdjei1l7yc"]

[ext_resource type="Script" path="res://Scripts/time_checker_notification.gd" id="1_meuwl"]

[sub_resource type="LabelSettings" id="LabelSettings_tn1b1"]
font_size = 19

[node name="TimeCheckerNotification" type="Window"]
position = Vector2i(0, 36)
size = Vector2i(250, 150)
always_on_top = true
script = ExtResource("1_meuwl")

[node name="BackGround" type="Panel" parent="."]
offset_right = 250.0
offset_bottom = 150.0

[node name="TimeTellingBackground" type="Panel" parent="."]
offset_right = 250.0
offset_bottom = 35.0

[node name="HBoxContainer" type="HBoxContainer" parent="."]
offset_right = 40.0
offset_bottom = 40.0
theme_override_constants/separation = 10

[node name="Control" type="Control" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Control2" type="Control" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="CurrentTimeHContainer" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="Control" type="Control" parent="HBoxContainer/VBoxContainer/CurrentTimeHContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CurrentTimeLabel" type="Label" parent="HBoxContainer/VBoxContainer/CurrentTimeHContainer"]
layout_mode = 2
text = "It's 00:00!"
label_settings = SubResource("LabelSettings_tn1b1")
horizontal_alignment = 1

[node name="Control2" type="Control" parent="HBoxContainer/VBoxContainer/CurrentTimeHContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Control3" type="Control" parent="HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 6)
layout_mode = 2
size_flags_vertical = 3

[node name="WhatAmIDoingNote" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="LineEdit" type="LineEdit" parent="HBoxContainer/VBoxContainer/WhatAmIDoingNote"]
custom_minimum_size = Vector2(230, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
placeholder_text = "What am i doing now?"
clear_button_enabled = true

[node name="Control3" type="Control" parent="HBoxContainer/VBoxContainer/WhatAmIDoingNote"]
layout_mode = 2

[node name="Control" type="Control" parent="HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 21.985)
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Control" type="Control" parent="HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Button" type="Button" parent="HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Submit"

[node name="Control2" type="Control" parent="HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[connection signal="pressed" from="HBoxContainer/VBoxContainer/HBoxContainer/Button" to="." method="_on_button_pressed"]
